--- a/src/components/outstanding sales/outstanding.sales.styles.scss
+++ b/src/components/outstanding sales/outstanding.sales.styles.scss
@@ -1,9 +1,8 @@
 .outstanding-sales{
     background-color: white;
-    display: flex;
-    gap: 1.4rem;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
     padding: 1.6rem;
     
   
