--- a/src/components/productCard/card.styles.css
+++ b/src/components/productCard/card.styles.css
@@ -42,7 +42,6 @@
 }
 .product-details{
     padding: 0.4rem 0.8rem;
-    text-overflow: ellipsis;
     font-size: 1.2rem;
 }
 
@@ -63,6 +62,10 @@
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 1.6;
+    width: 100px; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
 
 }
