--- a/src/components/top brands/top.brands.styles.css
+++ b/src/components/top brands/top.brands.styles.css
@@ -16,6 +16,14 @@
 }
 
 
-.top-category{
+.top-brand{
+  max-width: 200px;
+  max-height: 200px;
 
+}
+
+.brand-img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
