--- a/src/components/top categories/top.categories.styles.css
+++ b/src/components/top categories/top.categories.styles.css
@@ -21,9 +21,9 @@
     flex-direction: column;
     align-items: flex-end;
     min-width: 30%;
-    height: 40rem;
+    height: 30rem;
     border: 1px solid black;
-    flex: 1 1 0; 
+    flex: 1 1 300px; 
     /* margin-right: 0.7rem; */
     margin-bottom: 1.5rem;
     overflow: hidden;
