--- a/src/components/cart dropdown/cart.dropdown.styles.scss
+++ b/src/components/cart dropdown/cart.dropdown.styles.scss
@@ -8,7 +8,7 @@
 
 .cart-dropdown{
         background-color: #fff;
-        height: 70vh;
+        height: 100vh;
         width: 32rem;
         position: absolute;
         top: 100%;
@@ -36,7 +36,7 @@
 
 
 .checkout-con{
-   bottom: 0;
+//    bottom: 0;
 }
 
 
