--- a/src/components/top brand preview/top.brand.preview.styles.scss
+++ b/src/components/top brand preview/top.brand.preview.styles.scss
@@ -1,5 +1,5 @@
 
-.category-preview{
+.brand-preview{
     display: flex;
     min-width: 180px;
      /* max-width: 250px;  */
@@ -7,7 +7,7 @@
      /* flex: 0 1 auto; */
     flex-wrap: nowrap;
     /* grid-template-columns: repeat(auto-fit, minmax(180px, auto)); */
-    gap: 1.6rem;
+    gap: 3.2rem;
     padding: 0 1.6rem 2rem 1.6rem;
     margin-bottom: 4.8rem;
     border-bottom: 1px solid transparent;
