--- a/src/components/top category preview/top.category.preview.styles.scss
+++ b/src/components/top category preview/top.category.preview.styles.scss
@@ -7,7 +7,7 @@
      /* flex: 0 1 auto; */
     flex-wrap: nowrap;
     /* grid-template-columns: repeat(auto-fit, minmax(180px, auto)); */
-    gap: 1.6rem;
+    justify-content: space-between;
     padding: 0 1.6rem 2rem 1.6rem;
     margin-bottom: 4.8rem;
     border-bottom: 1px solid transparent;
